knowledge_base/knowledge/v15/capl/structured/ISO11783/VTIL_Touch, VTIL_PointingEventMsg.md
# VTIL_Touch, VTIL_PointingEventMsg

> Category: `ISO11783` | Type: `function`

## Syntax

```c
long VTIL_Touch(dword x, dword y, dword duration); // form 1
long VTIL_Touch(dbNode vt, dword x, dword y, dword duration); // form 2
long VTIL_PointingEventMsg(dword x, dword y, byte touchState); // form 3
long VTIL_PointingEventMsg(dbNode vt, dword x, dword y, byte touchState); // form 4
long VTIL_PointingEventMsg(dword x, dword y, byte touchState, dword parentMaskId); // form 5
long VTIL_PointingEventMsg(dbNode vt, dword x, dword y, byte touchState, dword parentMaskId); // form 6
```

## Description

Touches into the Data Mask.

The VTIL_Touch methods simulate a touch into the Data Mask and a release of the touch event after the duration. As a result, the Pointing Event Message is sent immediately with the touch state = pressed, then every 200 ms with the touch state = Held and after the duration with the touch state = Released.

If there is a button or input object at the specified position, the button or object is selected and pressed.

The VTIL_PointingEventMsg methods only send the Pointing Event Message (without influencing any button or input object and without triggering any event in the Virtual Terminal). You can use it to implement dragging operation.

## Parameters

| Name | Description |
|---|---|
| vt | VT simulation node to apply the function |
| x | X Position in pixels relative to top left corner of Data Mask area |
| y | Y Position in pixels relative to top left corner of Data Mask area |
| duration | Time while the Data Mask is pressed [ms]. If duration is 0 then only the command Pressed is sent. Else the commands Held and Released are sent too. |
| touchState | 0: Released 1: Pressed 2: Held 255: Used by VTs of version 3 or prior |
| parentMaskId | Current Parent Mask Object ID (used by VTs of version 6 and later) |

## Example

Example form 2, 4, 6

```c
long result;
result = VTIL_Touch(VT, 1, 2, 500);
switch (result)
{
  case 0: TestStepPass(); break;
  case -2104: TestStepFail("Currently there is no active Working Set!"); break;
  case -2115: TestStepFail("VT works in passive mode. Therefore you cannot touch it!"); break;
  default:    TestStepFail("Unexpected error"); break;
}
```

## Availability

| CANalyzer | CANoe | CANoe4SW Server Edition (Windows) | CANoe4SW Server Edition (Linux) | CANoe4SW | vTESTstudio |  |
|---|---|---|---|---|---|---|
| Since Version | — | 9.0 | 13.0 | — | — | 2.1 |
| Restricted To | — | ISO11783 | ISO11783 | — | — | form 2, 4, 6 ISO11783 |
| CANalyzer Measurement Setup (Transmit Branch) | — | N/A | N/A | N/A | N/A | N/A |
| CANoe Measurement Setup / CANalyzer Analysis Branch | — | — | — | — | N/A | N/A |
| CANoe Simulation Setup | N/A | ✔ (form 1, 3, 5) | ✔ (form 1, 3, 5) | — | N/A | N/A |
| CANoe System and Communication Setup | N/A | — | — | — | — | N/A |
| CANoe Test Setup for Test Modules | N/A | ✔ (form 2, 4, 6) | ✔ (form 2, 4, 6) | — | N/A | N/A |
| CANoe Test Setup for Test Units | N/A | ✔ (form 2, 4, 6) | ✔ (form 2, 4, 6) | — | — | N/A |
| 32-Bit | — | ✔ | ✔ | N/A | — | N/A |
| 64-Bit | — | ✔ | ✔ | — | — | N/A |
